test/corpus/assignments.txt
===================
Simple Declaration
===================

let a = 3;
let b = 5;
let c = a + b;

-------------------

(source_file
  (variable_declaration
    (variable_declarator
      (identifier)
      (literal
        (number))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (literal
        (number))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (binary_expression
        (identifier)
        (identifier)))))

===================
Simple Assignment
===================

let a = 10;
a = 5;
a = 5 * 2;

-------------------

(source_file
  (variable_declaration
    (variable_declarator
      (identifier)
      (literal
        (number))))
  (assignment
    (identifier)
    (literal
      (number)))
  (assignment
    (identifier)
    (binary_expression
      (literal
        (number))
      (literal
        (number)))))

===================
Multiple Declaration
===================

let a = 5, b = 3;
let c;

-------------------

(source_file
  (variable_declaration
    (variable_declarator
      (identifier)
      (literal
        (number)))
    (variable_declarator
      (identifier)
      (literal
        (number))))
  (variable_declaration
    (variable_declarator
      (identifier))))

===================
Function Declaration
===================

let sum2 = (a, b) => {
  return a + b;
};

-------------------

(source_file
  (variable_declaration
    (variable_declarator
      (identifier)
      (lambda_expression
        (parameters
          (identifier)
          (identifier))
        (statement_block
          (return_statement
            (binary_expression
              (identifier)
              (identifier))))))))

===================
Array access assignment
===================

let first = nums[0];
let nums[0] = first + 5;

-------------------

(source_file
  (variable_declaration
    (variable_declarator
      (identifier)
      (array_access_expression
        (identifier)
        (literal
          (number)))))
  (variable_declaration
    (variable_declarator
      (array_access_expression
        (identifier)
        (literal
          (number)))
      (binary_expression
        (identifier)
        (literal
          (number))))))

===================
Array expression assignment
===================

let nums = [1,2,3];
let a = ["a", "b"][0];

-------------------

(source_file
  (variable_declaration
    (variable_declarator
      (identifier)
      (array_expression
        (literal
          (number))
        (literal
          (number))
        (literal
          (number)))))
  (variable_declaration
    (variable_declarator
      (identifier)
      (array_access_expression
        (array_expression
          (literal
            (string
              (string_fragment)))
          (literal
            (string
              (string_fragment))))
        (literal
          (number))))))
