test/corpus/ffi.txt
===================
Interface load
===================

interface "./hello" load world;
interface "./hi" load greeting;

let a = world();

-------------------

(source_file
  (interfaces
    (interface
      (string
        (string_fragment))
      (identifier))
    (interface
      (string
        (string_fragment))
      (identifier)))
  (variable_declaration
    (variable_declarator
      (identifier)
      (call_expression
        (identifier)
        (arguments)))))

===================
Attribute access
===================

foo.bar;
foo.baz();
foo.baz().bar;
let b = foo.bar.qux;

-------------------

(source_file
  (expression_statement
    (nested_identifier
      (identifier)
      (identifier)))
  (expression_statement
    (call_expression
      (nested_identifier
        (identifier)
        (identifier))
      (arguments)))
  (expression_statement
    (nested_identifier
      (call_expression
        (nested_identifier
          (identifier)
          (identifier))
        (arguments))
      (identifier)))
  (variable_declaration
    (variable_declarator
      (identifier)
      (nested_identifier
        (nested_identifier
          (identifier)
          (identifier))
        (identifier)))))
